# cartesi-paio

./: .dockerignore  .gitignore  .gitmodules  AUTHORS  Dockerfile  LICENSE  README.md  fly.toml
decode-batch/: Cargo.toml
decode-batch/src/: main.rs
example/frontend/second/: README.md  package-lock.json  package.json
example/frontend/second/vanilla-ts-6963/: index.html  package-lock.json  package.json
example/frontend/second/vanilla-ts-6963/src/: main.ts  providers.ts  style.css  vite-env.d.ts
message/: Cargo.toml
message/src/: lib.rs
tooling/: start.sh  stop.sh
tripa/: Cargo.toml  Input.sol  README.md  config_default.toml  example_batch.hex  fund-sequencer.sh  input-box-abi.json  test.sh
tripa/src/: decode.rs  example.rs  main.rs  utils.rs
