[package]
name = "message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-core = { version = "0.7.6", features = ["sol-types", "serde"] }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", features = ["eip712"] }

serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
serde_json = "1.0"
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", features = ["eip712"] }
