[package]
name = "tripa"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
http-body-util = "0.1.2"
mime = "0.3.17"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "sync"] }
tower = "0.4.13"
tracing-subscriber = "0.3.18"
message = { path = "../message" }
toml = "0.8.14"
reqwest = "0.12.4"
anyhow = "1.0.86"
alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", rev = "b64f434" }
alloy-node-bindings = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", rev = "b64f434" }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", rev = "b64f434" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", rev = "b64f434" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", rev = "b64f434" }
alloy-json-abi = "0.7.6"
alloy-contract = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", rev = "b64f434" }
#alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", rev = "b64f434" }
alloy-core = { version = "0.7.6", features = ["sol-types", "serde", "json"] }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", features = ["eip712"], rev = "b64f434" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", rev = "b64f434" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", rev = "b64f434" }
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", features = ["eip712"], rev = "b64f434" }
futures-util = "0.3.30"
tower-http = { version = "0.5.2", features = ["cors"] }
