[package]
name = "tripa"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
http-body-util = "0.1.2"
mime = "0.3.17"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "sync"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
tracing-subscriber = "0.3.18"
message = { path = "../message" }
toml = "0.8.14"
reqwest = "0.12.4"
anyhow = "1.0.86"
alloy = { version = "0.3.6" }
alloy-node-bindings = { version = "0.3.6" }
alloy-consensus = { version = "0.3.6" }
alloy-network = { version = "0.3.6" }
alloy-rpc-types = { version = "0.3.6" }
alloy-json-abi = "0.7.6"
alloy-contract = { version = "0.3.6" }
#alloy-signer-local = { version = "0.3.6" }
alloy-core = { version = "0.8.5", features = ["sol-types", "serde", "json"] }
alloy-signer = { version = "0.3.6", features = ["eip712"] }
alloy-provider = { version = "0.3.6", features = ["reqwest"] }
alloy-transport-http = { version = "0.3.6" }
alloy-signer-local = { version = "0.3.6", features = ["eip712"] }
futures-util = "0.3.30"
avail-rust = { git = "https://github.com/availproject/avail", rev="5dc73fb028eed1413a1f15ee22c8a9641b0d23a8"}
surf-disco = "0.9"
tide-disco = "0.9"
es-version = { git = "https://github.com/EspressoSystems/es-version.git", branch = "main" }
celestia-rpc = {git = "https://github.com/eigerco/lumina"}
celestia-types = { git = "https://github.com/eigerco/lumina" }
hex = "0.4.3"
